# LearningQQuickImageViewer

./: CMakeLists.txt
BasicSetup/: CMakeLists.txt
BasicSetup/include/: ImageProvider.h
BasicSetup/src/: main.cpp  main.qml
